# llama-syslog-packet

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test_llm.py
backend/: requirements.txt  run_streamlit.sh
backend/app/: streamlit_app.py
backend/app/api/: chat_routes.py
backend/app/api/endpoints/: file.py
backend/app/core/: config.py  utils.py
backend/app/models/: packet.py
backend/app/services/: chat_service.py  file_service.py  syslog_analyzer.py
evaluation/: benchmark.py  evaluator.py  run_5x_benchmark.py  run_benchmark.py  visualize_metrics.py
evaluation/benchmark_results/: benchmark_comparison.csv  benchmark_summary.csv
evaluation/test/: test_dataset.json  test_dataset2.json
frontend/: Dockerfile  index.html  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: layout.css
frontend/src/components/chat/: ChatInput.vue  ChatMessages.vue
frontend/src/components/file/: FileList.vue  FileMeta.vue  FileUpload.vue
frontend/src/components/visualization/: VisualizationPanel.vue
model/: __init__.py  generate_datasets.py
model/benchmark/: evaluator.py  generate_predictions.py  generator.py  run_benchmark.py
model/datasets/: unified.json
model/datasets/syslog/: messages163  messages163-2  messages163-4  messages205  messages24  messages39  messages39-2  messages52  messages52-1  messages52-2  messages52-4  secure163-3  secure205  secure205-1  secure205-3  secure205-4  secure24-1  secure24-2  secure24-3  secure252  secure252-1  secure252-3  secure252-4  secure39-1  secure39-3  secure41-3  secure41-4  secure52  secure52-1  secure52-3
model/processors/: pcap_classification.py  pcap_processor.py  sliding_window.py  syslog_processor.py
model/training/: train_model.py
models/: generate_datasets.py  requirements.txt  requirements_base.txt  requirements_web.txt  self_instruct.py
models/benchmark/: evaluator.py  generator.py  run_benchmark.py
models/datasets/syslog/: messages163-1  messages163-3  messages39-1  messages39-3  messages39-4  messages52-3  secure163  secure163-1  secure163-2  secure163-4  secure205-2  secure24  secure24-4  secure39  secure39-2  secure39-4  secure41  secure41-1  secure41-2  secure52-2  secure52-4
models/processors/: pcap_processor.py  syslog_processor.py
models/training/: train_model.py
models/web/: train_app.py
web/: .env  README.md  env.example  run.py
web/app/: __init__.py  main.py  streamlit_app.py
web/app/api/: __init__.py  chat_routes.py  file_routes.py  log_routes.py  model_routes.py
web/app/core/: config.py  dependencies.py  utils.py
web/app/models/: packet.py
web/app/services/: __init__.py  chat_service.py  code_executor.py  file_service.py  llm_service.py  packet_analyzer.py  rag_service.py  syslog_analyzer.py
web/temp/: syslog.1
web/vector_store/: index.faiss
